[package]
name = "route-engine-rs"
version = "0.1.0"
edition = "2024"
description = "Routing engine for directed graphs with extensible strategies and constraints"
license = "MIT"
repository = "https://github.com/ibatanov/route-engine-rs"
authors = ["Igor Batanov <irbatanov@ya.ru>"]

[dependencies]

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"

[[bench]]
name = "benchmark"
harness = false
